--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -61,7 +61,9 @@
 
 .homeRightInfoBottom:hover,
 .homeRightWorksBottom:hover,
-.homeRightMessagesBottomItem:hover {
+.homeRightMessagesBottomItem:hover,
+.homeLeftOffersTopRight:hover,
+.homeLeftOffersBottomItem:hover {
     color: #185a87;
     cursor: pointer;
 }
@@ -82,6 +84,7 @@
     display: flex;
     align-items: center;
     font-size: 18px;
+    padding: 3.75px 0px;
 }
 
 .homeRightStepsBottomItemText {
@@ -172,6 +175,11 @@
     flex: 8;
 }
 
+.homeLeftCash {
+    cursor: pointer;
+
+}
+
 .homeLeftCashTop {
     display: flex;
     padding: 21px;
@@ -195,35 +203,123 @@
     line-height: 1.46;
 }
 
-.homeLeftCashBottom {
+.homeLeftCashBottom,
+.homeLeftOffersBottom {
     font-size: 14px;
     display: flex;
 }
 
-.homeLeftCashBottomItem {
+.homeLeftCashBottomItem,
+.homeLeftOffersBottomItem {
     flex: 6;
     display: flex;
     align-items: center;
     justify-content: center;
     line-height: 1.428571429;
     padding: 7px 0;
+    color: #575858;
+}
+
+.homeLeftOffers {
+    color: #575858;
+
+}
+
+.homeLeftOffersTop {
+    display: flex;
+    padding: 21px;
+    align-items: center;
+}
+
+.homeLeftOffersTopLeft {
+    flex: 8;
+    display: grid;
+    grid-template-columns: 45% 45%;
+    grid-template-rows: 50% 50%;
+    column-gap: 30px;
+    row-gap: 15px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.homeLeftOffersTopLeftItem {
+    cursor: pointer;
+}
+
+.homeLeftOffersTopLeftItemInfo {
+    display: flex;
+    line-height: 1.46;
+    font-size: 13px;
+    justify-content: space-between;
+}
+
+.homeLeftOffersTopLeftItemInfoRight,
+.homeLeftOffersTopLeftItemInfoLeft {
+    font-family: "Noto Naskh Arabic", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+.homeLeftOffersTopLeftItemBar {
+    position: relative;
+    height: 8px;
+}
+
+.underProgress {
+    background-color: #f0f0f0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.progress {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background-color: #2386C8;
+    border-radius: 5px;
+    right: 0;
+    top: 0;
 }
 
 
 
 
+.homeLeftOffersTopRight {
+    flex: 4;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 
+}
 
+.homeLeftOffersTopRightTitle {
+    font-size: 18px;
+    font-weight: 500;
+}
 
 .m5 {
     margin-right: 5px;
 }
 
+.m7 {
+    margin: 7px 0;
+}
+
+.lh {
+    line-height: 1.84;
+}
+
 .border {
     border-bottom: 1px solid #ddd;
-
 }
 
 .bold {
     font-weight: bold;
+}
+
+.zeroColor {
+    color: #314459;
 }
