--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,7 +1,7 @@
 .project {
     direction: rtl;
     padding: 25px 15px;
-    border-top: 1px solid rgb(233, 232, 232);
+    border-bottom: 1px solid rgb(233, 232, 232);
     background-color: #fff;
 }
 
