--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -3,6 +3,7 @@
     background-color: #f0f0f0;
     padding: 0px 15px;
     direction: rtl;
+    color: #575858;
 }
 
 .homeRight {
@@ -23,7 +24,6 @@
     align-items: center;
     justify-content: center;
     padding: 21px;
-    color: #575858;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
@@ -45,7 +45,9 @@
 .homeRightArticlesBottomItem,
 .homeRightLastTop,
 .homeLeftCashBottom,
-.homeLeftOffersBottom {
+.homeLeftOffersBottom,
+.homeLeftProjectsTop,
+.homeLeftLastTop {
     padding: 14px 21px;
 
 }
@@ -54,7 +56,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #575858;
     font-size: 14px;
     padding: 17.5px 21px;
 }
@@ -70,7 +71,6 @@
 
 .homeRightStepsTop {
     cursor: pointer;
-    color: #575858;
     font-size: 16px;
 }
 
@@ -96,7 +96,6 @@
 .homeRightMessagesTop,
 .homeRightWorksTop {
     cursor: pointer;
-    color: #575858;
     padding: 21px;
     display: flex;
     flex-direction: column;
@@ -121,13 +120,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #575858;
     font-size: 14px;
 }
 
 .homeRightWorksBottom,
 .homeRightArticlesTop {
-    color: #575858;
     font-size: 14px;
 
 }
@@ -157,7 +154,6 @@
 
 
 .homeRightLastBottom {
-    color: #575858;
     padding: 21px;
     font-family: "Noto Naskh Arabic", "Helvetica Neue", Helvetica, Arial, sans-serif;
     display: flex;
@@ -183,7 +179,6 @@
 .homeLeftCashTop {
     display: flex;
     padding: 21px;
-    color: #575858;
     font-size: 18px;
 }
 
@@ -217,13 +212,8 @@
     justify-content: center;
     line-height: 1.428571429;
     padding: 7px 0;
-    color: #575858;
 }
 
-.homeLeftOffers {
-    color: #575858;
-
-}
 
 .homeLeftOffersTop {
     display: flex;
@@ -320,6 +310,32 @@
 .homeLeftOffersTopRightTitle {
     font-size: 18px;
     font-weight: 500;
+}
+
+.homeLeftLastTop {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.homeLeftLastBottom {
+    display: flex;
+    color: #2386C8;
+    padding: 21px;
+}
+
+.homeLeftLastBottomItem {
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    flex: 6;
+}
+
+.homeLeftLastBottomItemTitle {
+    margin-bottom: 10px;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 .m5 {
