changes to profile

--- a/src/components/options/options.css
+++ b/src/components/options/options.css
@@ -32,6 +32,10 @@
     margin-bottom: 15px;
 }
 
+.optionsInput {
+    cursor: pointer;
+}
+
 .optionsLabel {
     display: inline-block;
     margin-right: 5px;
