--- a/src/components/profileHeader/profileHeader.css
+++ b/src/components/profileHeader/profileHeader.css
@@ -70,8 +70,12 @@
 
 }
 
-.active {
+.profileActive {
     background-color: #f0f0f0;
+}
+
+.personalInfoBottomRight {
+    display: flex;
 }
 
 .personalInfoBottomRightButton {
