--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -30,8 +30,8 @@
 }
 
 .footerTopRightSection {
-    margin-right: 15px;
-    margin-left: 150px;
+    flex: 1;
+    padding: 0px 20px;
 }
 
 .footerTopRightSectionTitle {
@@ -81,12 +81,16 @@
 
 }
 
+.footerBottomItems{
+    display: flex;
+    justify-content: center;
+}
+
 .footerBottomItemsWrapper {
     display: flex;
     direction: rtl;
     flex-wrap: wrap;
-    width: 1100px;
-    margin: auto;
+    width: 80%;
 }
 
 .footerBottomItem {
@@ -106,4 +110,11 @@
 .footerBottomItemDesc {
     font-size: 10px;
     color: #999;
+}
+
+@media (max-width: 991px) {
+    .footerBottomItemsWrapper{
+        padding: 0px 20px;
+        width: 100%;
+    }
 }
