--- a/src/components/profileHeader/profileHeader.css
+++ b/src/components/profileHeader/profileHeader.css
@@ -26,6 +26,7 @@
     color: #6c757d;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .personalInfoTopDetailsIconContainer {
@@ -76,6 +77,7 @@
 
 .personalInfoBottomRight {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .personalInfoBottomRightButton {
@@ -97,3 +99,20 @@
 .personalInfoBottomRightButtonIcon {
     margin-left: 5px;
 }
+
+@media (max-width: 767px) {
+    .personalInfoBottom{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+    .personalInfoBottomRight{
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width:324px) {
+    .personalInfoBottomLeftItem{
+        font-size: 12px;
+    }   
+}
+
