--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -21,13 +21,14 @@
 
 .projectHeaderRightIcons {
     color: #777;
-    font-size: 12px !important;
+    font-size: 11px !important;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .projectHeaderRightIcon {
-    font-size: 15px !important;
+    font-size: 14px !important;
     margin-left: 3px;
 }
 
@@ -69,7 +70,7 @@
     line-clamp: 2;
     -webkit-box-orient: vertical;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15px;
     font-family: "Noto Naskh Arabic", "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.84;
     color: #343a40;
