--- a/src/pages/addProject/addProject.css
+++ b/src/pages/addProject/addProject.css
@@ -3,6 +3,7 @@
     direction: rtl;
     background-color: #efefef;
     padding: 0px 15px;
+    
 }
 
 .addProjectForm {
@@ -31,10 +32,12 @@ sup {
 
 
 .projectInput {
+    width: 100%;
+
     outline: none;
     margin: 10px 0px 5px 0;
     font-size: 16px;
-    padding: 2px 15px 2px 0;
+    padding: 6px 12px;
     color: #555555;
     border: 1px solid #ccc;
     writing-mode: horizontal-tb !important;
@@ -190,5 +193,26 @@ sup {
 @media (max-width: 991px) {
     .addProjectInfo{
         display: none;
+    }
+    .addProjectForm{
+        width: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+    .projectPayment{
+        flex-direction: column;
+    }
+    .inputContainer.half{
+        width: 100%;
+    }
+    .inputContainer.half:first-child{
+        margin: 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .addProjectWrapper{
+        padding: 0;
     }
 }
