--- a/index.css
+++ b/index.css
@@ -2,4 +2,6 @@
     padding: 0;
     margin: 0;
     font-family: "Noto Kufi Arabic", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    box-sizing: border-box;
+
 }
