adding profile page

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -208,6 +208,7 @@
 .homeLeftCashBottomItem,
 .homeLeftOffersBottomItem {
     flex: 6;
+    flex-wrap: wrap;
     display: flex;
     align-items: center;
     justify-content: center;
