--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,85 +1,85 @@
 .project {
-    direction: rtl;
-    padding: 25px 15px;
-    border-bottom: 1px solid rgb(233, 232, 232);
-    background-color: #fff;
+  direction: rtl;
+  padding: 25px 15px;
+  border-bottom: 1px solid rgb(233, 232, 232);
+  background-color: #fff;
 }
 
 .projectHeader {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.label{
-    background-color: #9e9e9e;
-    color: #fff;
-    font-weight:400;
-    font-size: 75%;
-    padding: 1px 5px;
+.label {
+  background-color: #9e9e9e;
+  color: #fff;
+  font-weight: 400;
+  font-size: 75%;
+  padding: 5px;
 }
 
 .projectHeaderRightTitle {
-    color: #2386c8;
-    font-size: 15px;
-    cursor: pointer;
-    margin-bottom: 7px;
+  display: block;
+  color: #2386c8;
+  font-size: 15px;
+  cursor: pointer;
+  margin-bottom: 7px;
+  text-decoration: none;
 }
 
 .projectHeaderRightIcons {
-    color: #777 !important;
-    font-size: 11px !important;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+  color: #777 !important;
+  font-size: 11px !important;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .projectHeaderRightIcon {
-    font-size: 14px !important;
-    margin-left: 3px;
+  font-size: 14px !important;
+  margin-left: 3px;
 }
 
 .projectHeaderRightText {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
-
 .projectHeaderLeftButton {
-    background-color: #1e75ae;
-    border: none;
-    outline: none;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    padding: 2px 0px;
-    font-size: 12px !important;
-
+  background-color: #1e75ae;
+  border: none;
+  outline: none;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 2px 0px;
+  font-size: 12px !important;
 }
 
 .projectHeaderLeftButtonRight {
-    display: flex;
-    align-items: center;
-    padding: 0px 7px;
-
+  display: flex;
+  align-items: center;
+  padding: 0px 7px;
 }
 
 .projectHeaderLeftButtonRight:hover,
 .projectHeaderLeftButtonDropDown:hover {
-    background-color: #2386c8;
+  background-color: #2386c8;
 }
 
 .projectDesc {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    line-clamp: 2;
-    -webkit-box-orient: vertical;
-    cursor: pointer;
-    font-size: 15px;
-    font-family: "Noto Naskh Arabic", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 1.84;
-    color: #343a40;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  cursor: pointer;
+  font-size: 15px;
+  font-family: "Noto Naskh Arabic", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+  line-height: 1.84;
+  color: #343a40;
 }
